Open api generated-api
